@@ -28,6 +28,7 @@ This release includes the following bugfixes:
  o SSL lib post-close write
  o curl failed to report write errors for tiny failed downloads
  o TFTP BLKSIZE
+ o Expect: 100-continue handling when set by the application
 
 This release includes the following known bugs:
 
@@ -39,6 +40,6 @@ advice from friends like these:
  Yang Tse, Kamil Dudka, Christian Schmitz, Constantine Sapuntzakis,
  Marco Maggi, Camille Moncelier, Claes Jakobsson, Kevin Baughman,
  Marc Kleine-Budde, Jad Chamcham, Bjorn Augustsson, David Byron,
- Markus Koetter, Chad Monroe
+ Markus Koetter, Chad Monroe, Martin Storsjo
 
         Thanks! (and sorry if I forgot to mention someone)
